Bug 509002 - selection action bar stays after clearing selection
Summary: selection action bar stays after clearing selection
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools/Selection (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-09-01 13:27 UTC by Squeaky Pancakes
Modified: 2025-10-11 03:06 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Squeaky Pancakes 2025-09-01 13:27:41 UTC
SUMMARY
hiding selection in nightly(8d173ab) causes problems with the selection action bar. it will not popup if the selection is hidden and stick around after a selection has been removed if the selection was hidden first.

STEPS TO REPRODUCE
1. make a selection
2. hide selection
3. clear selection

OBSERVED RESULT
action bar will hang around or just not show up if the selection is hidden. happens using the shortcut and the action bar itself if selections are hidden.

EXPECTED RESULT
while you cannon see the selection while hidden some of the actions like filling or clearing are still useful while the actual selection is hidden.

Operating System: Artix Linux 
KDE Plasma Version: 6.4.4
KDE Frameworks Version: 6.17.0
Qt Version: 6.9.1
Kernel Version: 6.16.4-artix1-1 (64-bit)
Graphics Platform: X11
Processors: 4 × Intel® Core™ i5-3550 CPU @ 3.30GHz
Memory: 16 GiB of RAM (15.6 GiB usable)
Graphics Processor: AMD Radeon RX 580 Series

ADDITIONAL INFORMATION
Comment 1 Freya Lupen 2025-09-01 15:07:55 UTC
Confirmed.
- The Selections Action Bar doesn't appear when making a selection with Select->Display Selection off, until it's re-enabled. (debatable)
- If Display Selection is disabled with the bar active, its background and handle disappear but the buttons stay, even after deselecting, until Display Selection is re-enabled. (definitely a bug)

Similar issues happen with Select->Show Global Selection Mask.
Comment 2 Emmet O'Neill 2025-10-11 03:06:55 UTC
Git commit e69a9338b218ef6def25a1ae0297791829d8cc0c by Emmet O'Neill.
Committed on 11/10/2025 at 02:42.
Pushed by emmetoneill into branch 'master'.

SAP: Have selection bar properly respect visibility.

M  +42   -32   libs/ui/kis_selection_actions_panel.cpp
M  +1    -1    libs/ui/kis_selection_actions_panel.h
M  +3    -2    libs/ui/kis_selection_decoration.cc

https://invent.kde.org/graphics/krita/-/commit/e69a9338b218ef6def25a1ae0297791829d8cc0c