SAP: Have selection bar properly respect visibility.

BUG:509002