libs/ui/kis_selection_actions_panel.h
@@ -44,7 +44,7 @@ private:
     void setupButtons();
     QPushButton *createButton(const QString &iconName, const QString &tooltip);
     QPoint updateCanvasBoundaries(QPoint position, QWidget *canvasWidget) const;
-    QPoint initialDragHandlePosition() const;
+    QPoint initialDragHandlePosition(const KisCoordinatesConverter *coordinatesConverter) const;
     void drawActionBarBackground(QPainter &gc) const;
 
     struct Private;
